Update index.html ratnadeep

--- a/mario-game/index.html
+++ b/mario-game/index.html
@@ -3,7 +3,7 @@
 <html lang="en-us">
 <head>
     <meta charset="utf-8">
-    <title>Super Mario Bros in HTML5</title>
+    <title>Ratnadeep Mario Bros in Dockerfile</title>
 
     <link href="mario.css" rel="stylesheet">
     <link href="Fonts/stylesheet.css" rel="stylesheet">
